[package]
name = "amethyst-sandbox"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <jcosinas@liberty.com.au>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
serde = { version = "1.0.115", features = ["derive"] }
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]